--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="screen-wrapper">
+      <div class="start-screen">
+        <input type="button" onclick="startGame()" value="Masuk" />
+      </div>
       <div class="screen"></div>
     </div>
     <script src="script.js"></script>
