--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="screen-wrapper">
-      <div class="screen"></div>
-    </div>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
+
+  <!-- Fix Background -->
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: linear-gradient(180deg, #4da6ff, #0066cc);
+    }
+  </style>
+
+  <link rel="stylesheet" href="style.css">
+  <title>Flappy Layangan</title>
+</head>
+
+<body>
+
+  <!-- START MENU -->
+  <div id="menu" class="active">
+      <h1 class="menu-title">FLAPPY LAYANGAN</h1>
+
+      <button class="menu-btn" onclick="playGame()">PLAY</button>
+      <button class="menu-btn" onclick="showLeaderboard()">LEADERBOARD</button>
+      <button class="menu-btn" onclick="exitGame()">EXIT</button>
+  </div>
+
+  <!-- GAME CANVAS AREA -->
+  <div class="screen"></div>
+
+  <!-- GAME OVER SCREEN -->
+  <div id="gameOver">
+      <h2>GAME OVER</h2>
+      <p>Score: <span id="finalScore">0</span></p>
+
+      <button onclick="restartGame()">RESTART</button>
+      <button onclick="returnMenu()">MENU</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
+  
