--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="screen-wrapper">
       <div class="start-screen">
-        <input type="button" onclick="startGame()" value="Masuk" />
+        <button id="start-btn">Start Game</button>
       </div>
       <div class="screen"></div>
     </div>
