--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="player-score">999999</span>
               </div>
             </div>
-            <button onclick="returnMenu()">MENU</button>
+            <button class="btn" onclick="returnMenu()">MENU</button>
           </div>
         </div>
       </div>
@@ -34,9 +34,10 @@
           <p>Score: <span id="finalScore">0</span></p>
           <p>Time: <span id="elapsedTime">0</span> s</p>
 
-          <button onclick="returnMenu()">MENU</button>
+          <button class="btn" onclick="returnMenu()">MENU</button>
         </div>
       </div>
+      <div class="tutorial"><p>Tap [SPACE] to jump. Hold [SPACE] to go down.</p></div>
     </div>
 
     <script src="script.js"></script>
